--- a/package.json
+++ b/package.json
@@ -12,34 +12,32 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.15.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.6",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
-    "jsonwebtoken": "^9.0.0",
+    "jose": "^4.14.4",
     "next": "13.4.6",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
-    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.6",
+    "postcss": "8.4.24",
     "prettier": "2.8.8",
-    "prisma": "^4.15.0"
+    "prisma": "^4.15.0",
+    "typescript": "5.1.3"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
