--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
-    "@prisma/client": "^4.15.0",
+    "@material-tailwind/react": "^2.0.4",
+    "@prisma/client": "^4.16.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
-    "flowbite": "^1.6.6",
-    "flowbite-react": "^0.4.7",
     "jose": "^4.14.4",
     "next": "13.4.6",
     "react": "18.2.0",
