--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly src/prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@material-tailwind/react": "^2.0.4",
-    "@prisma/client": "^4.16.0",
+    "@prisma/client": "^4.16.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
@@ -34,7 +35,9 @@
     "eslint-config-next": "13.4.6",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "5.1.3"
   },
   "prisma": {
