--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "edge-csrf": "^1.0.4",
+    "formidable": "^3.5.0",
+    "helmet": "^7.0.0",
     "jose": "^4.14.4",
     "next": "13.4.6",
+    "next-connect": "^1.0.0",
+    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
@@ -27,6 +32,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/formidable": "^2.0.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -35,7 +42,6 @@
     "eslint-config-next": "13.4.6",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
-    "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.1.3"
