--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
