(Fix) DB Connection String

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:H7UutHIhEO9U5QWdnCBO@localhost:5432/postgres"
+DATABASE_URL="mysql://7bya7atb77n9395x2buc:pscale_pw_kEht7YsyhsgY4BMlX6pz9RqL4yEhr5EdUywuGt3sRxE@aws.connect.psdb.cloud/palm-app?sslaccept=strict"
 
 JWT_SECRET="fullstack-app"
 COOKIE_NAME="fullstack-app-cookie"
