--- a/.env
+++ b/.env
@@ -1,10 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://7bya7atb77n9395x2buc:pscale_pw_kEht7YsyhsgY4BMlX6pz9RqL4yEhr5EdUywuGt3sRxE@aws.connect.psdb.cloud/palm-app?sslaccept=strict"
+DATABASE_URL='mysql://vxo5udp7p45571elc6wf:pscale_pw_yKc06wNrWbORgIEdjxOylNRharw7hqeRaoN2EV0Henj@aws.connect.psdb.cloud/palm-app-db?sslaccept=strict&connect_timeout=300'
 
 JWT_SECRET="fullstack-app"
 COOKIE_NAME="fullstack-app-cookie"
