(Fix) env variables hostname

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DATABASE_URL='mysql://vxo5udp7p45571elc6wf:pscale_pw_yKc06wNrWbORgIEdjxOylNRharw
 
 JWT_SECRET="fullstack-app"
 COOKIE_NAME="fullstack-app-cookie"
+
+HOSTNAME="http://localhost:3000"
