--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DATABASE_URL='mysql://vxo5udp7p45571elc6wf:pscale_pw_yKc06wNrWbORgIEdjxOylNRharw
 JWT_SECRET="fullstack-app"
 COOKIE_NAME="fullstack-app-cookie"
 
-HOSTNAME="http://localhost:3000"
+NEXT_PUBLIC_VERCEL_URL="http://localhost:3000"
