--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 DATABASE_URL='mysql://vxo5udp7p45571elc6wf:pscale_pw_yKc06wNrWbORgIEdjxOylNRharw7hqeRaoN2EV0Henj@aws.connect.psdb.cloud/palm-app-db?sslaccept=strict&connect_timeout=300'
 
-JWT_SECRET="fullstack-app"
-COOKIE_NAME="fullstack-app-cookie"
-
-NEXT_PUBLIC_VERCEL_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="somereallysecretsecret"
