--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@material-tailwind/react": "^2.0.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
-    "edge-csrf": "^1.0.4",
     "helmet": "^7.0.0",
-    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.6",
+    "next-auth": "^4.22.3",
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
