--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@uploadthing/react": "^5.2.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
@@ -27,8 +28,10 @@
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
+    "uploadthing": "^5.2.1",
     "yup": "^1.2.0",
     "zustand": "^4.3.9"
   },
