--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "uploadthing": "^5.2.1",
     "yup": "^1.2.0",
