--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="postgresql://postgres:XiSPjj9GuNa5iqzC@db.tmjdkfkotdytuvmfzvbr.supabase.co:6543/postgres?pgbouncer=true&connect_timeout=300"
-DIRECT_URL="postgresql://postgres:XiSPjj9GuNa5iqzC@db.tmjdkfkotdytuvmfzvbr.supabase.co:5432/postgres"
+DATABASE_URL="postgres://postgres.tmjdkfkotdytuvmfzvbr:KpZrcQC0HExjbcCf@aws-0-eu-central-1.pooler.supabase.com:5432/postgres?pgbouncer=true&connect_timeout=300"
+DIRECT_URL="postgres://postgres.tmjdkfkotdytuvmfzvbr:KpZrcQC0HExjbcCf@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="somereallysecretsecret"
